@@ -55,12 +55,12 @@
     <checkstyle.config.location>io/aklivity/zilla/conf/checkstyle/configuration.xml</checkstyle.config.location>
     <checkstyle.suppressions.location>io/aklivity/zilla/conf/checkstyle/suppressions.xml</checkstyle.suppressions.location>
     <antlr4.version>4.13.0</antlr4.version>
-    <agrona.version>1.21.1</agrona.version>
+    <agrona.version>1.23.1</agrona.version>
     <slf4j.version>1.7.36</slf4j.version>
     <junit.version>5.10.2</junit.version>
-    <byteman.version>4.0.22</byteman.version>
+    <byteman.version>4.0.23</byteman.version>
     <jmock.version>2.6.0</jmock.version>
-    <mockito.version>5.8.0</mockito.version>
+    <mockito.version>5.14.1</mockito.version>
     <k3po.version>3.3.0</k3po.version>
     <jmh.version>1.37</jmh.version>
   </properties>
@@ -203,11 +203,6 @@
         <groupId>com.github.biboudis</groupId>
         <artifactId>jmh-profilers</artifactId>
         <version>0.1.4</version>
-      </dependency>
-      <dependency>
-        <groupId>com.github.jsqlparser</groupId>
-        <artifactId>jsqlparser</artifactId>
-        <version>5.0</version>
       </dependency>
       <dependency>
         <groupId>io.aklivity.k3po</groupId>
@@ -361,7 +356,7 @@
         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
-          <version>0.8.11</version>
+          <version>0.8.12</version>
           <configuration>
             <propertyName>jacoco.java.option</propertyName>
           </configuration>
@@ -430,7 +425,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M5</version>
           <configuration>
-            <argLine>@{jacoco.java.option} -Xshare:off --add-opens java.base/sun.nio.ch=ALL-UNNAMED</argLine>
+            <argLine>@{jacoco.java.option} -Xshare:off</argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -443,7 +438,7 @@
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>3.0.0-M4</version>
           <configuration>
-            <argLine>@{jacoco.java.option} -Xshare:off --add-opens java.base/sun.nio.ch=ALL-UNNAMED -Djdk.attach.allowAttachSelf=true</argLine>
+            <argLine>@{jacoco.java.option} -Xshare:off -Djdk.attach.allowAttachSelf=true</argLine>
           </configuration>
           <executions>
             <execution>
